# burnt-cw-hubs

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md
.github/workflows/: Basic.yml
hub/: .gitignore  Cargo.toml  README.md
hub/burnt-cw-std/: Cargo.toml
hub/burnt-cw-std/metadata/: Cargo.toml
hub/burnt-cw-std/metadata/src/: lib.rs
hub/burnt-cw-std/ownable/: Cargo.toml
hub/burnt-cw-std/ownable/src/: lib.rs
hub/burnt-cw-std/proxy/: Cargo.toml
hub/burnt-cw-std/proxy/src/: lib.rs
hub/src/: contract.rs  error.rs  manager.rs  msg.rs  state.rs
seat/: Cargo.toml  NOTICE  README.md
seat/.github/workflows/: Basic.yml
seat/src/: contract.rs  error.rs  helpers.rs  lib.rs  manager.rs  msg.rs  state.rs
