[workspace]
members = [
  "hub",
  "seat"
]

[workspace.dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.1.3", features = ["staking"] }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.16.0"
cw2 = "0.15.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
thiserror = { version = "1.0.31" }
burnt-glue = "0.2.2"
semver = "1.0.14"
cw721 = "0.16.0"
cw721-base = { version = "0.16.0", features = ["library"] }
ownable = { git = "https://github.com/burnt-labs/burnt-cw-std" }
metadata = { git = "https://github.com/burnt-labs/burnt-cw-std" }
token = { git = "https://github.com/burnt-labs/burnt-cw-std" }
sellable = { git = "https://github.com/burnt-labs/burnt-cw-std" }
redeemable = { git = "https://github.com/burnt-labs/burnt-cw-std" }
sales = { git = "https://github.com/burnt-labs/burnt-cw-std" }